// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly one button 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
      <div
        className="MuiStack-root css-v53bf6-MuiStack-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1desrfe-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly standard 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly two buttons 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
      <div
        className="MuiStack-root css-v53bf6-MuiStack-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1desrfe-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1olp7er-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with body  1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <img
        alt="Login"
        src="static/media/login-white.9e86b706.svg"
      />
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
      <div
        className="MuiStack-root css-v53bf6-MuiStack-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1desrfe-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1olp7er-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with custom decorator 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <div
        style={
          {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": "50%",
            "display": "flex",
            "fontSize": "32px",
            "height": "100px",
            "justifyContent": "center",
            "width": "100px",
          }
        }
      >
        PA
      </div>
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          <p>
            Leggi le domande frequenti sull’adesione a 
            <b>
              pagoPA
            </b>
             da parte degli Enti Creditori oppure scrivi a:
             
            <a
              href="mailto:account@pagopa.it"
            >
              account@pagopa.it
            </a>
          </p>
        </p>
      </div>
      <div
        className="MuiStack-root css-v53bf6-MuiStack-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1desrfe-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1olp7er-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with icon 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <img
        alt="Login"
        src="static/media/login-white.9e86b706.svg"
      />
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly with icon and two buttons 1`] = `
<section
  className="MuiBox-root css-14prgyt"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="MuiStack-root css-1ex9eoo-MuiStack-root"
    >
      <img
        alt="Login"
        src="static/media/login-white.9e86b706.svg"
      />
      <div
        className="MuiStack-root css-54p0y9-MuiStack-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1uaewpj-MuiTypography-root"
        >
          Vuoi diventare un Partner tecnologico qualificato?
        </h6>
        <p
          className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
        >
          Leggi le domande frequenti sull’adesione a pagoPA da parte degli Enti Creditori oppure scrivi a: account@pagopa.it
        </p>
      </div>
      <div
        className="MuiStack-root css-v53bf6-MuiStack-root"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1desrfe-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1olp7er-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          text="LEGGI LE FAQ"
          type="button"
        >
          LEGGI LE FAQ
        </button>
      </div>
    </div>
  </div>
</section>
`;
